Snapshots show up again using new event implementation, need to disappear widget with background process, and also parse the data from the getEvent, it is already being sent to logcat, just need to start sorting it before tomorrow